--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -1,7 +1,6 @@
 .content {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   background-color: var(--bg);
 }
 
